# tanmatsu-discord

./: .gitignore  CMakeLists.txt  Makefile  SETUP.md  discord.json  esp-discord.md
main/: CMakeLists.txt  attach_upload.c  attach_upload.h  backfill.c  backfill.h  config.c  config.h  discord_task.c  discord_task.h  fbdraw.c  fbdraw.h  file_browser.c  file_browser.h  hershey.h  icons.c  icons.h  idf_component.yml  intfs.c  intfs.h  main.c  msgstore.c  msgstore.h  preview.c  preview.h  theme.c  theme.h  ui_core.c  ui_core.h
metadata/: metadata.json
